# HelloOpenGL

./: CMakeLists.txt  Camera.h  Shader.h  Texture.h  glad.c  main.cpp
include/glad/: glad.h
